<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey_transparent"
    android:layout_gravity="center" >
<LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="40dp"
    android:background="@drawable/customborder"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical" >
    <!-- <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_separator" /> -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical" >

                    <TextView
                        android:id="@+id/dialog_wifi_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="left"
                        android:singleLine="true"
                        android:layout_margin="@dimen/activity__margin_small"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="left"
                        android:singleLine="true"
                        android:layout_margin="@dimen/activity__margin_small"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white"
                        android:textStyle="normal"
                        android:text="@string/str_password"
                        android:textSize="@dimen/text_size_small" />
            <EditText
                android:id="@+id/editText_wifi_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:height="@dimen/address_editbox_height"
                android:layout_margin="@dimen/activity__margin_small"
                android:hint="@string/str_hint_password"
                android:inputType="textVisiblePassword"
                android:singleLine="true"
                android:text="" />
           </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/wifi_cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.495"
            android:background="@color/background_dark_grey"
            android:text="@string/btnCancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0.005"
            android:layout_gravity="center"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/wifi_connect_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.495"
            android:background="@color/background_dark_grey"
            android:text="@string/btnConnect"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"  />
    </LinearLayout>
</LinearLayout>
</LinearLayout>